--- a/src/main/resources/templates/admin/chartMonthToDate.html
+++ b/src/main/resources/templates/admin/chartMonthToDate.html
@@ -27,13 +27,13 @@
         <div class="album py-3 px-2 bg-light">
           <div class="row">
               <div class="col-md-4">
-                <div th:replace="admin/dashboardCardLayout :: cardFields(isFullScreen=${isFullScreen},cardTitle='Quotes',guageDiv='guage_div_quotes',totalValue=${salesQuotesMTD},totalStyle='background-color: #00bfff;', targetValue=${salesQuotesTargetMonthly},targetStyle='background-color: #ff85e6;', qtyValue=${salesQuotesQtyMTD}, qtyTarget=${salesQuotesTargetQtyMonthly},avgValue=${averageMonthlyQuotes},avgTarget=${averageMonthlyQuotesTarget},avgProfitValue=${averageMonthlyQuotesProfit},avgProfitTarget=${averageMonthlyQuotesProfitTarget},targetAchieved=${targetAchievedQuotes},graphDiv='graph_div_quotes')"> </div>
+                <div th:replace="admin/dashboardCardLayout :: cardFields(isFullScreen=${isFullScreen},cardTitle='Quotes',guageDiv='guage_div_quotes',totalValue=${salesQuotesMTD},totalStyle='background-color: #00bfff;', targetValue=${salesQuotesCumulativeTargetMonthly},targetStyle='background-color: #ff85e6;', qtyValue=${salesQuotesQtyMTD}, qtyTarget=${salesQuotesTargetQtyMonthly},avgValue=${averageMonthlyQuotes},avgTarget=${averageMonthlyQuotesTarget},avgProfitValue=${averageMonthlyQuotesProfit},avgProfitTarget=${averageMonthlyQuotesProfitTarget},targetAchieved=${targetAchievedQuotes},graphDiv='graph_div_quotes',totalValueGraphTop=${salesQuotesMTD},targetValueGraphTop=${salesQuotesTargetMonthly},percentageOfTargetGraphTop=${targetAchievedQuotes},runRateGraphTop=${salesAvgQuotesMTD})"></div>
               </div>
               <div class="col-md-4">
-                <div th:replace="admin/dashboardCardLayout :: cardFields(isFullScreen=${isFullScreen},cardTitle='Orders',guageDiv='guage_div_orders',totalValue=${salesOrderedMTD},totalStyle='background-color: #f9ae06;', targetValue=${salesOrderedTargetMonthly},targetStyle='background-color: #fff67e;color:black', qtyValue=${salesOrderedQtyMTD}, qtyTarget=${salesOrderedTargetQtyMonthly},avgValue=${averageMonthlyOrders},avgTarget=${averageMonthlyOrdersTarget},avgProfitValue=${averageMonthlyOrdersProfit},avgProfitTarget=${averageMonthlyOrdersProfitTarget},targetAchieved=${targetAchievedOrders},graphDiv='graph_div_orders')"> </div>
+                <div th:replace="admin/dashboardCardLayout :: cardFields(isFullScreen=${isFullScreen},cardTitle='Orders',guageDiv='guage_div_orders',totalValue=${salesOrderedMTD},totalStyle='background-color: #f9ae06;', targetValue=${salesOrderedCumulativeTargetMonthly},targetStyle='background-color: #fff67e;color:black', qtyValue=${salesOrderedQtyMTD}, qtyTarget=${salesOrderedTargetQtyMonthly},avgValue=${averageMonthlyOrders},avgTarget=${averageMonthlyOrdersTarget},avgProfitValue=${averageMonthlyOrdersProfit},avgProfitTarget=${averageMonthlyOrdersProfitTarget},targetAchieved=${targetAchievedOrders},graphDiv='graph_div_orders',totalValueGraphTop=${salesOrderedMTD},targetValueGraphTop=${salesOrderedTargetMonthly},percentageOfTargetGraphTop=${targetAchievedOrders},runRateGraphTop=${salesAvgOrderedMTD})"></div>
               </div>
               <div class="col-md-4">
-                <div th:replace="admin/dashboardCardLayout :: cardFields(isFullScreen=${isFullScreen},cardTitle='Invoices',guageDiv='guage_div_invoices',totalValue=${salesInvoicedMTD},totalStyle='background-color: #0b4119;color:white;', targetValue=${salesInvoicedTargetMonthly},targetStyle='background-color: #92edaa;color:black', qtyValue=${salesInvoicedQtyMTD}, qtyTarget=${salesInvoicedTargetQtyMonthly},avgValue=${averageMonthlyInvoices},avgTarget=${averageMonthlyInvoicesTarget},avgProfitValue=${averageMonthlyInvoicesProfit},avgProfitTarget=${averageMonthlyInvoicesProfitTarget},targetAchieved=${targetAchievedInvoices},graphDiv='graph_div_invoices')"> </div>
+                <div th:replace="admin/dashboardCardLayout :: cardFields(isFullScreen=${isFullScreen},cardTitle='Invoices',guageDiv='guage_div_invoices',totalValue=${salesInvoicedMTD},totalStyle='background-color: #0b4119;color:white;', targetValue=${salesInvoicedCumulativeTargetMonthly},targetStyle='background-color: #92edaa;color:black', qtyValue=${salesInvoicedQtyMTD}, qtyTarget=${salesInvoicedTargetQtyMonthly},avgValue=${averageMonthlyInvoices},avgTarget=${averageMonthlyInvoicesTarget},avgProfitValue=${averageMonthlyInvoicesProfit},avgProfitTarget=${averageMonthlyInvoicesProfitTarget},targetAchieved=${targetAchievedInvoices},graphDiv='graph_div_invoices',totalValueGraphTop=${salesInvoicedMTD},targetValueGraphTop=${salesInvoicedTargetMonthly},percentageOfTargetGraphTop=${targetAchievedInvoices},runRateGraphTop=${salesAvgInvoicedMTD})"></div>
               </div>
             </div>
           </div>
@@ -69,34 +69,34 @@
   var salesInvoiceTargets = /*[[${salesInvoiceTargets}]]*/ [];
   
   var salesOrderTargetArr = [];
-  salesOrderTargetArr.push(["Date","Actual","Target","Daily Avg"]);
+  salesOrderTargetArr.push(["Date","Actual","Target","Target Avg"]);
   if(salesOrderTargets.length == 0)
   {
     salesOrderTargetArr.push(["0",0,0,0]);
   }
   for (i = 0; i < salesOrderTargets.length; i++) {
-    salesOrderTargetArr.push([salesOrderTargets[i].date.split("T")[0].split("-")[2]+'/'+salesOrderTargets[i].date.split("T")[0].split("-")[1],parseFloat(salesOrderTargets[i].total.toFixed(2)),parseFloat(salesOrderTargets[i].cumulativeTarget.toFixed(2)),parseFloat(salesOrderTargets[i].averageTotal.toFixed(2))]);
+    salesOrderTargetArr.push([salesOrderTargets[i].date.split("T")[0].split("-")[2]+'/'+salesOrderTargets[i].date.split("T")[0].split("-")[1],parseFloat(salesOrderTargets[i].total.toFixed(2)),parseFloat(salesOrderTargets[i].cumulativeTarget.toFixed(2)),parseFloat(salesOrderTargets[i].totalTarget.toFixed(2))]);
   }
   console.log('salesOrderTargetArr-->'+salesOrderTargetArr);
   var salesQuoteTargetArr = [];
-  salesQuoteTargetArr.push(["Date","Actual","Target","Daily Avg"]);
+  salesQuoteTargetArr.push(["Date","Actual","Target","Target Avg"]);
   if(salesQuoteTargets.length == 0)
   {
     salesQuoteTargetArr.push(["0",0,0,0]);
   }
   for (i = 0; i < salesQuoteTargets.length; i++) {
-    salesQuoteTargetArr.push([salesQuoteTargets[i].date.split("T")[0].split("-")[2]+'/'+salesQuoteTargets[i].date.split("T")[0].split("-")[1],parseFloat(salesQuoteTargets[i].total.toFixed(2)),parseFloat(salesQuoteTargets[i].cumulativeTarget.toFixed(2)),parseFloat(salesQuoteTargets[i].averageTotal.toFixed(2))]);
+    salesQuoteTargetArr.push([salesQuoteTargets[i].date.split("T")[0].split("-")[2]+'/'+salesQuoteTargets[i].date.split("T")[0].split("-")[1],parseFloat(salesQuoteTargets[i].total.toFixed(2)),parseFloat(salesQuoteTargets[i].cumulativeTarget.toFixed(2)),parseFloat(salesQuoteTargets[i].totalTarget.toFixed(2))]);
   }
   console.log('salesQuoteTargetArr-->'+salesQuoteTargetArr);
 
   var salesInvoiceTargetArr = [];
-  salesInvoiceTargetArr.push(["Date","Actual","Target","Daily Avg"]);
+  salesInvoiceTargetArr.push(["Date","Actual","Target","Target Avg"]);
   if(salesInvoiceTargets.length == 0)
   {
     salesInvoiceTargetArr.push(["0",0,0,0]);
   }
   for (i = 0; i < salesInvoiceTargets.length; i++) {
-    salesInvoiceTargetArr.push([salesInvoiceTargets[i].date.split("T")[0].split("-")[2]+'/'+salesInvoiceTargets[i].date.split("T")[0].split("-")[1],parseFloat(salesInvoiceTargets[i].total.toFixed(2)),parseFloat(salesInvoiceTargets[i].cumulativeTarget.toFixed(2)),parseFloat(salesInvoiceTargets[i].averageTotal.toFixed(2))]);
+    salesInvoiceTargetArr.push([salesInvoiceTargets[i].date.split("T")[0].split("-")[2]+'/'+salesInvoiceTargets[i].date.split("T")[0].split("-")[1],parseFloat(salesInvoiceTargets[i].total.toFixed(2)),parseFloat(salesInvoiceTargets[i].cumulativeTarget.toFixed(2)),parseFloat(salesInvoiceTargets[i].totalTarget.toFixed(2))]);
   }
   console.log('salesInvoiceTargetArr-->'+salesInvoiceTargetArr);
 
