--- a/src/main/resources/templates/admin/dashboardCardLayout.html
+++ b/src/main/resources/templates/admin/dashboardCardLayout.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<div class="card mb-4 shadow-sm" th:fragment="cardFields(isFullScreen,cardTitle,guageDiv,totalValue, totalStyle,targetValue,targetStyle,qtyValue, qtyTarget,avgValue,avgTarget,avgProfitValue,avgProfitTarget,targetAchieved,graphDiv)">
+<div class="card mb-4 shadow-sm" th:fragment="cardFields(isFullScreen,cardTitle,guageDiv,totalValue, totalStyle,targetValue,targetStyle,qtyValue, qtyTarget,avgValue,avgTarget,avgProfitValue,avgProfitTarget,targetAchieved,graphDiv,totalValueGraphTop,targetValueGraphTop,percentageOfTargetGraphTop,runRateGraphTop)">
     <div class="card-header h3"  th:text="${cardTitle}"></div>
         <div class="card-body d-flex justify-content-center" th:id="${guageDiv}"></div>
         <th:block th:if=${!isFullScreen}>
@@ -55,7 +55,20 @@
           </table>
         </div>
       </th:block>
-        
-          <div th:id="${graphDiv}" class="d-flex justify-content-center mt-5"></div>
+      <div class="card mt-3 mx-3 my-3">
+        <div class="card-body"> 
+      <th:block th:if=${!isFullScreen}>
+       <div class="d-flex justify-content-center">
+        <button type="button" class="col-md-5 btn btn-sm btn-outline-primary mr-5 text-left border-0" th:title="${'Target : $' + #numbers.formatDecimal(targetValueGraphTop, 1, 'COMMA', 0, 'POINT')}"><small><span th:text="${'Target : $' + #numbers.formatDecimal(targetValueGraphTop, 1, 'COMMA', 0, 'POINT')}"></span></small></button>
+        <button type="button" class="col-md-5 btn btn-outline-success btn-sm text-left border-0" th:title="${'Run Rate : $' + #numbers.formatDecimal(runRateGraphTop, 1, 'COMMA', 0, 'POINT')}"><small><span th:text="${'Run Rate : $' + #numbers.formatDecimal(runRateGraphTop, 1, 'COMMA', 0, 'POINT')}"></span></small></button>
+      </div>
+      <div class="d-flex justify-content-center mt-1">
+        <button type="button" class="col-md-5 btn btn-sm btn-outline-danger mr-5 text-left border-0" th:title="${'Total Todate : $' + #numbers.formatDecimal(totalValueGraphTop, 1, 'COMMA', 0, 'POINT')}"><small><span  th:text="${'Total To-date : $' + #numbers.formatDecimal(totalValueGraphTop, 1, 'COMMA', 0, 'POINT')}"></span></small></button>
+        <button type="button" class="col-md-5 btn btn-outline-info btn-sm text-left border-0" th:title="${'% of Target : $' + #numbers.formatDecimal(percentageOfTargetGraphTop, 1, 'COMMA', 0, 'POINT')}"><small><span th:text="${'% of Target : ' + #numbers.formatDecimal(percentageOfTargetGraphTop, 1, 'COMMA', 0, 'POINT')+'%'}"></span></small></button>
+        </div>
+      </th:block>
+          <div th:id="${graphDiv}" class="d-flex justify-content-center mt-2"></div>
+          </div>
+        </div>
          </div>  
   </html>
