--- a/src/main/resources/templates/footerLayout.html
+++ b/src/main/resources/templates/footerLayout.html
@@ -9,7 +9,7 @@
 <script type="text/javascript" src="../js/popper.js"></script>
 <!-- Bootstrap core JavaScript -->
 <script type="text/javascript" src="../js/bootstrap.js"></script>
-<script type="text/javascript" src="../js/bootstrap-datepicker.min.js"></script>
+<script type="text/javascript" src="../js/bootstrap-datepicker.js"></script>
 <!-- Google chart -->
 <script type="text/javascript" src="../js/loader.js"></script>
 <script type="text/javascript" src="../js/custom.js"></script>
