--- a/src/main/resources/templates/headLayout.html
+++ b/src/main/resources/templates/headLayout.html
@@ -12,7 +12,7 @@
 <!-- Bootstrap core CSS -->
 <link rel="stylesheet" href="../css/bootstrap.css">
 <link rel="stylesheet" href="../css/dashboard.css">
-<link rel="stylesheet" href="../css/bootstrap-datepicker.min.css">
+<link rel="stylesheet" href="../css/bootstrap-datepicker.css">
 <link rel=icon href=../img/favicon.ico>
 <title>CSCParts - Dashboard</title>
 
